--- a/TojoMobile WatchKit App/Info.plist
+++ b/TojoMobile WatchKit App/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>Tojo.TojoMobile.watchkitapp</string>
+	<string>com.tongjo.watch</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
