--- a/TojoMobile/Info.plist
+++ b/TojoMobile/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>Tojo.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.tongjo.tongjomobile</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
