面向ios8.3的修改

--- a/TojoMobile WatchKit Extension/Info.plist
+++ b/TojoMobile WatchKit Extension/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.tongjo.tongjomobile.watchextension</string>
+	<string>com.tongjo.tongjomobile.watchkitextension</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -27,7 +27,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>Tojo.TojoMobile.watchkitapp</string>
+			<string>com.tongjo.tongjomobile.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
