--- a/TojoMobile WatchKit App/Info.plist
+++ b/TojoMobile WatchKit App/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.tongjo.watch</string>
+	<string>com.tongjo.tongjomobile.watchkitapp</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -28,7 +28,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>Tojo.TojoMobile</string>
+	<string>com.tongjo.tongjomobile</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
