--- a/TojoMobile/resources/projectCategory.plist
+++ b/TojoMobile/resources/projectCategory.plist
@@ -16,55 +16,71 @@
 		<key>categoryId</key>
 		<integer>0</integer>
 		<key>catName</key>
-		<string>热门</string>
-	</dict>
-	<dict>
-		<key>customId</key>
-		<integer>3</integer>
-		<key>categoryId</key>
-		<integer>0</integer>
-		<key>catName</key>
 		<string>最新</string>
 	</dict>
 	<dict>
 		<key>customId</key>
-		<integer>4</integer>
-		<key>categoryId</key>
-		<integer>0</integer>
-		<key>catName</key>
-		<string>同校</string>
-	</dict>
-	<dict>
-		<key>customId</key>
-		<integer>0</integer>
-		<key>categoryId</key>
 		<integer>3</integer>
+		<key>categoryId</key>
+		<integer>0</integer>
 		<key>catName</key>
-		<string>计算机</string>
+		<string>最热</string>
 	</dict>
 	<dict>
 		<key>customId</key>
 		<integer>0</integer>
 		<key>categoryId</key>
-		<integer>4</integer>
+		<integer>1</integer>
 		<key>catName</key>
-		<string>平面设计</string>
+		<string>IT互联网</string>
 	</dict>
 	<dict>
 		<key>customId</key>
 		<integer>0</integer>
 		<key>categoryId</key>
-		<integer>0</integer>
+		<integer>11</integer>
 		<key>catName</key>
-		<string>机械设计</string>
+		<string>设计</string>
 	</dict>
 	<dict>
 		<key>customId</key>
 		<integer>0</integer>
 		<key>categoryId</key>
-		<integer>0</integer>
+		<integer>22</integer>
 		<key>catName</key>
-		<string>材料</string>
+		<string>市场</string>
+	</dict>
+	<dict>
+		<key>customId</key>
+		<integer>0</integer>
+		<key>categoryId</key>
+		<integer>27</integer>
+		<key>catName</key>
+		<string>校园创业</string>
+	</dict>
+	<dict>
+		<key>customId</key>
+		<integer>0</integer>
+		<key>categoryId</key>
+		<integer>32</integer>
+		<key>catName</key>
+		<string>校园生活创意</string>
+	</dict>
+	<dict>
+		<key>customId</key>
+		<integer>0</integer>
+		<key>categoryId</key>
+		<integer>37</integer>
+		<key>catName</key>
+		<string>公益</string>
+	</dict>
+	<dict>
+		<key>customId</key>
+		<integer>0</integer>
+		<key>categoryId</key>
+		<integer>41</integer>
+		<key>catName</key>
+		<string>比赛</string>
 	</dict>
 </array>
 </plist>
